--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,3 +11,7 @@ body #wall #tag-2 {
 body div#wall #tag-3.slick {
   display: none;
 }
+
+body div#wall .parent #tag-5.slick {
+  display: none;
+}
