--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,3 +15,9 @@ body div#wall #tag-3.slick {
 body div#wall .parent #tag-5.slick {
   display: none;
 }
+
+body div#wall div.parent div:last-child div#tag-6 {
+  background: url(../images/tag-6.png) no-repeat;
+  z-index: 2;
+  display: block;
+}
