--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -12,7 +12,7 @@ body div#wall #tag-3.slick {
   display: none;
 }
 
-body div#wall .parent #tag-5.slick {
+/*body div#wall .parent #tag-5.slick {
   display: none;
 }
 
@@ -20,4 +20,4 @@ body div#wall div.parent div:last-child div#tag-6 {
   background: url(../images/tag-6.png) no-repeat;
   z-index: 2;
   display: block;
-}
+}*/
