--- a/css/paint.css
+++ b/css/paint.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   background: black url(../images/sketch.jpg) no-repeat center;
   background-size: cover;
 }
@@ -54,14 +54,14 @@ div#wall .parent #tag-5.slick {
   display: block;
 }
 
-/*div#wall div.parent div:last-child div#tag-6 {
+div#wall div.parent div:last-child div#tag-6 {
   background: url(../images/tag-6.png) no-repeat;
   z-index: 2;
   display: block;
-}*/
+}
 
 body div#wall div.parent div > #tag-7.slick {
   background: url(../images/tag-7.png) no-repeat;
   z-index: 1;
   display: block;
-}
+}*/
