--- a/css/paint.css
+++ b/css/paint.css
@@ -24,7 +24,7 @@ body {
   height: 622px;
 }
 
-/*.tag-1 {
+.tag-1 {
   background: url(../images/tag-1.png) no-repeat;
   z-index: 7;
   display: block;
@@ -47,7 +47,7 @@ div#wall #tag-3.slick {
   z-index: 4;
   display: block;
 }
-*/
+
 
 div#wall .parent #tag-5.slick {
   background: url(../images/tag-5.png) no-repeat;
