--- a/css/paint.css
+++ b/css/paint.css
@@ -49,11 +49,11 @@ div#wall #tag-3.slick {
 }
 
 
-div#wall .parent #tag-5.slick {
+/*div#wall .parent #tag-5.slick {
   background: url(../images/tag-5.png) no-repeat;
   z-index: 3;
   display: block;
-}
+}*/
 
 
 div#wall div.parent div:last-child div#tag-6 {
