automatically backed up by learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -12,6 +12,10 @@ body div#wall #tag-3.slick {
   display: none;
 }
 
+body #wall #tag-4 {
+  display: none;
+}
+
 body div#wall .parent #tag-5.slick {
   display: none;
 }
